# simflow

./: CHANGELOG.md  README.md  db.sqlite3  pyproject.toml
.claude/: launch.json  settings.json  settings.local.json
.github/workflows/: plugin-release.yml
checklist/: admin.py  api_views.py  apps.py  export_view.py  models.py  plugin_views.py  views.py
checklist/fixtures/: checklist_content.json
checklist/management/commands/: checklist_content.py
checklist/static/checklist/: wakelock.js
checklist/static/checklist/css/: components.css  layout.css  states.css
checklist/templates/checklist/: base.html  detail.html  idle.html  profile.html
checklist/templates/registration/: delete_confirm.html  login.html  logout_confirm.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  profile.html  register.html
checklist/tests/: test_models.py  test_plugin_state.py
docs/: RELEASE.md  WAKE_LOCK_SPEC.md
scripts/: bump_content_version.py
smart_training_checklist/: __init__.py
smart_training_checklist/settings/: base.py  prod.py
xplane_plugin/: CHANGELOG.md
xplane_plugin/xFlow/: PI_xFlow.py  config.ini
